# miramesh-zephyr-network-example

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  config2hex.py  create_update_image.py  pm_static_nrf52840dk_nrf52840.yml  pm_static_nrf52dk_nrf52832.yml  pm_static_nrf54l15dk_nrf54l15_cpuapp_ns.yml  prj.conf  sysbuild.conf  west.yml
boards/: nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp_ns.overlay
child_image/: mcuboot.conf
src/: main.c
src/dfu/: ble.c  ble.h  image_handling.c  image_handling.h
src/fota-driver/: README.md  fota-driver.c  fota-driver.h
src/fota_driver/: README.md  fota_driver.c  fota_driver.h
